# DataAnalysisToolkit

./: .gitignore  .pre-commit-config.yml  .readthedocs.yml  License  README.md  pyproject.toml  requirements.txt  requirements2.txt  setup.py
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  bandit.yml  build-docs.yml  convert_notebooks.yml  python-publish.yml
data/: gen_test.csv  test.csv
docs/: PyPI_Upload.md  README.md  TODO.md  conf.py  index.rst  layout.md  linkedin-msg.md  package.html  requirements.txt
docs/TODO/: part1.md  part10.md  part11.md  part12.md  part13.md  part2.md  part3.md  part4.md  part5.md  part6.md  part7.md  part8.md  part9.md
docs/source/: conf.py  index.rst
docs/source/AdditionalResources/: community_support.md  contribution_guidelines.md  examples_use_cases.md  faqs_troubleshooting.md  integration_guide.md
docs/source/AdditionalResources/tutorials/: tutorial_data_import.ipynb
docs/source/Appendices/: api_references.md  changelog.md  contact_info.md  data_import_documentation.md  getting_support.md  how_to_contribute.md  reporting_issues.md
docs/source/Modules/: data_sources.md  formatters.md  generators.md  integrators.md  model.md  preprocessor.md  utils.md  visualizer.md
docs/source/Research/: requirements_specification.md  research_notes.md
docs/source/_templates/: about.html  donate.html  navigation.html
examples/: generate_report.py  report_template.html  tutorial_additional_exercises.ipynb
notebooks/: advanced_statistical_analysis.ipynb  tutorial_additional_exercises.ipynb  tutorial_data_import.ipynb
scripts/: build_docs.sh  create_issues.sh  run_tests.ps1  run_tests.sh  update_version.py
src/: __init__.py  data_analysis_toolkit.py  data_analyzer.py
src/data_sources/: __init__.py  api_connector.py  excel_connector.py  sql_connector.py
src/dataanalysistoolkit/: __init__.py  data_analysis_toolkit.py
src/dataanalysistoolkit/.conf/: config.yaml  plot_config.json
src/dataanalysistoolkit/data_sources/: excel_connector.py  sql_connector.py
src/dataanalysistoolkit/deployment/: model_deployment.py
src/dataanalysistoolkit/formatters/: __init__.py
src/dataanalysistoolkit/generators/: __init__.py  report_generator.py
src/dataanalysistoolkit/integrators/: __init__.py
src/dataanalysistoolkit/model/: error_handling.py  feature_engineer.py  hyperparameter_tuning.py  model_evaluator.py  model_training.py
src/dataanalysistoolkit/model/classification/: decision_trees.py  random_forest.py
src/dataanalysistoolkit/model/regression/: hyperparameter_tuning.py  regression.py
src/dataanalysistoolkit/preprocessor/: __init__.py  data_imputer.py  data_prep.py
src/dataanalysistoolkit/statistical_analysis/: __init__.py  anova.py  hypothesis_testing.py  regression.py  statistics_1.py  time_series.py
src/formatters/: data_formatter.py
src/generators/: csv_data_generator.py  generate_data.py  report_generator.py
src/integrators/: data_integrator.py
src/make_data/: generate_data.py  make_test.py
src/model/: __init__.py
src/preprocessor/: __init__.py  data_prep.py
src/utils/: __init__.py  data_imputer.py
src/visualizer/: __init__.py  data_visualizer.py
tests/: __init__.py  test_data_analysis_toolkit.py  test_data_analyzer.py
tests/data/: test_random.csv
tests/data_sources/: __init__.py  test_api_connector.py  test_excel_connector.py  test_sql_connector.py
tests/generators/: test_csv_data_generator.py  test_generate_data.py  test_report_generator.py
tests/integrators/: test_data_integrator.py
tests/interfaces/: test_api_connector.py  test_excel_connector.py  test_sql_connector.py
tests/model/: test_feature_engineer.py  test_model_evaluator.py
tests/preprocessor/: test_data_prep.py
tests/utils/: test_data_imputer.py
tests/visualizer/: test_data_visualizer.py
tutorials/: tutorial_data_import.ipynb
