[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DataAnalysisToolkit"
dynamic = ["version"]
description = "The DataAnalysisToolkit project is a Python-based data analysis tool designed to streamline various data analysis tasks. It allows users to load data from CSV files and perform operations such as statistical calculations, outlier detection, data cleaning, and visualization."
authors = [
    { name = "Thaddeus Thomas", email = "thaddeus.r.thomas@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
requires-python = ">=3.8"
keywords = ["data analysis", "CSV", "statistics", "data cleaning", "data visualization"]
# include = ["src/**/*.py", "docs/**/*.md"]
# exclude = ["tests/", "examples/"]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "check-manifest"]
docs = ["sphinx>=2.2"]

[tool.setuptools.dynamic]
version = {attr = "dataanalysistoolkit.__version__"}

[project.urls]
Repository = "https://github.com/thomasthaddeus/dataanalysistoolkit"
Issues = "https://github.com/thomasthaddeus/dataanalysistoolkit/issues"
Documentation = "https://dataanalysistoolkit.readthedocs.io/en/latest/"
