[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DataAnalysisToolkit"
dynamic = ["version"]
description = "The DataAnalysisToolkit project is a Python-based data analysis tool designed to streamline various data analysis tasks. It allows users to load data from CSV files and perform operations such as statistical calculations, outlier detection, data cleaning, and visualization."
authors = [
    { name = "Thaddeus Thomas", email = "thaddeus.r.thomas@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
requires-python = ">=3.8"
keywords = ["data analysis", "CSV", "statistics", "data cleaning", "data visualization"]
# include = ["src/**/*.py", "docs/**/*.md"]
# exclude = ["tests/", "examples/"]
dependencies = [
    "backports.tarfile==1.1.1",
    "build==1.2.1",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "docutils==0.21.2",
    "fonttools==4.51.0",
    "greenlet==3.0.3",
    "idna==3.7",
    "importlib_metadata==7.1.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==5.3.0",
    "jaraco.functools==4.0.1",
    "joblib==1.4.2",
    "keyring==25.2.0",
    "kiwisolver==1.4.5",
    "markdown-it-py==3.0.0",
    "matplotlib==3.8.4",
    "mdurl==0.1.2",
    "more-itertools==10.2.0",
    "nh3==0.2.17",
    "nltk==3.8.1",
    "numpy==1.26.4",
    "packaging==24.0",
    "pandas==2.2.2",
    "pillow==10.3.0",
    "pkginfo==1.10.0",
    "Pygments==2.18.0",
    "pyparsing==3.1.2",
    "pyproject_hooks==1.1.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "pywin32-ctypes==0.2.2",
    "readme_renderer==43.0",
    "regex==2024.4.28",
    "requests==2.31.0",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "rich==13.7.1",
    "scikit-learn==1.4.2",
    "scipy==1.13.0",
    "seaborn==0.13.2",
    "six==1.16.0",
    "SQLAlchemy==2.0.30",
    "threadpoolctl==3.5.0",
    "tqdm==4.66.4",
    "twine==5.0.0",
    "typing_extensions==4.11.0",
    "tzdata==2024.1",
    "urllib3==2.2.1",
    "zipp==3.18.1"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "check-manifest"]
docs = ["myst-parser", "sphinx", "nbsphinx", "sphinx-rtd-theme", "sphinxcontrib-websupport"]

[tool.setuptools.dynamic]
version = {attr = "dataanalysistoolkit.__version__"}

[project.urls]
Repository = "https://github.com/thomasthaddeus/dataanalysistoolkit"
Issues = "https://github.com/thomasthaddeus/dataanalysistoolkit/issues"
Documentation = "https://dataanalysistoolkit.readthedocs.io/en/latest/"
