[tool.poetry]
name = "DataAnalysisToolkit"
version = "1.2.3"
description = "The DataAnalysisToolkit project is a Python-based data analysis tool designed to streamline various data analysis tasks. It allows users to load data from CSV files and perform operations such as statistical calculations, outlier detection, data cleaning, and visualization."
authors = ["Thaddeus Thomas <thaddeus.r.thomas@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thomasthaddeus/dataanalysistoolkit"
repository = "https://github.com/thomasthaddeus/dataanalysistoolkit"
documentation = "https://dataanalysistoolkit.readthedocs.io/en/latest/"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
keywords = ["data analysis", "CSV", "statistics", "data cleaning", "data visualization"]
include = [ "tests/data/*.csv", "src/dataanalysistoolkit/.conf/*.json"]

[tool.poetry.dependencies]
python = "^3.9"
# dataanalysistoolkit = {path = "../src/dataanalysistoolkit/", develop = true}
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
contourpy = "1.2.1"
cycler = "0.12.1"
docutils = "0.21.2"
fonttools = "4.53.1"
greenlet = "3.0.3"
idna = "3.7"
importlib_metadata = "7.1.0"
joblib = "1.4.2"
keyring = "25.2.1"
kiwisolver = "1.4.5"
markdown-it-py = "3.0.0"
matplotlib = "3.9.2"
mdurl = "0.1.2"
more-itertools = "10.3.0"
nh3 = "0.2.18"
nltk = "3.9"
numpy = "2.0.1"
packaging = "24.1"
pandas = "2.2.2"
pillow = "10.4.0"
pkginfo = "1.11.1"
Pygments = "2.18.0"
pyparsing = "3.1.2"
pyproject_hooks = "1.1.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
pywin32-ctypes = "0.2.2"
readme_renderer = "43.0"
regex = "2024.7.24"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rfc3986 = "2.0.0"
rich = "13.7.1"
scikit-learn = "1.5.1"
scipy = "1.13.1"
seaborn = "0.13.2"
six = "1.16.0"
SQLAlchemy = "2.0.31"
threadpoolctl = "3.5.0"
tqdm = "4.66.4"
typing_extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
zipp = "3.19.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mock = "*"
check-manifest = "*"
myst-parser = "*"
sphinx = "*"
nbsphinx = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-websupport = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
